# pw_sources

./: README.md  config.ini  datalake_statistics.json  execution_statistics.json  pyproject.toml  requirements.txt  table_statistics.json
data/: ZonificacionZT1259.dbf  ZonificacionZT1259.shx  extraction_1200.parquet  extraction_1500.parquet  extraction_300.parquet  extraction_600.parquet  extraction_900.parquet  hexagon_grid.gpkg  results_models.csv
extractions/: connectivity.sql  density.sql  density_final.sql  diversity.sql  fn_cadastral_areas.sql  fn_density.sql  fn_design.sql  fn_far_localacc.sql  fn_network_centrality.sql  fn_other.sql  fn_parkacc.sql  fn_pois_template.sql  fn_transacc.sql  fn_walkable_trips.sql  hexagon_grid.gpkg  network_centrality.sql
networks/: centrality.py  culdesacs.py  geo_utils.py  make_network.py  make_network0.py  network_utils.py  shortest_paths.py
notebooks/: dataset.ipynb  figures.ipynb  logit_models.ipynb  rf_models.ipynb
project_walknet/: app.py  create_schema.sql  db_models.py  extraction_factory.py  extractions.yaml  network_factory.py  networks.yaml  requirements.txt  run.py  run_statistics.py  run_test.py  source_factory.py  sources.yaml  utils.py
sources/: amm_network.py  catastro.py  catastro_metadata.py  centrality.py  crtm.ipynb  edm2018.py  edm2018_metadata.py  edm_geo.py  factory.py  ine_adrh.py  ine_geo.py  ine_movilidad.py  ite_rates.csv  ite_rates.py  ors.py  osm.py
tests/: create_dataset.ipynb  dev_fragstats.py  edm2018.ipynb  final_modeling.ipynb  interpersion.ipynb  maps.ipynb  partition.ipynb  (+2 more)
(+58 files in other folders)
